--- a/smartcab_report.ipynb
+++ b/smartcab_report.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -347,12 +347,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "I played around with the learning rate and calculated it using the time step. I stayed with a discount factor of 0.1. I tried several exploration rates, but that lead to not reaching the goal more often."
+    "I played around with the learning rate and calculated it using the time step. I stayed with a discount factor of 0.1."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -457,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -497,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -537,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -586,7 +586,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "My final agent finds a close to optimal policy. As seen above it usually reaches the destination in time in the last 10 trials and it usually only gets penalties for reacting wrong when trying to go forward. This happens with green or red lights, but the green case dominates. Other rules based on more inputs than the traffic light and the direction the smartcab needs to go seem to be learned faster."
+    "Here is one example output of states, when the agent acts suboptimally:\n",
+    "`Trial 90\n",
+    "Go: left, lights: green, oncoming: None, left: None, action: right\n",
+    "Go: left, lights: green, oncoming: None, left: None, action: right\n",
+    "Trial 91\n",
+    "Go: forward, lights: green, oncoming: None, left: None, action: right\n",
+    "Trial 92\n",
+    "Trial 93\n",
+    "Go: forward, lights: green, oncoming: None, left: None, action: right\n",
+    "Trial 94\n",
+    "Go: forward, lights: green, oncoming: None, left: None, action: right\n",
+    "Go: right, lights: green, oncoming: right, left: None, action: forward\n",
+    "Trial 95\n",
+    "Trial 96\n",
+    "Trial 97\n",
+    "Go: forward, lights: green, oncoming: None, left: forward, action: left\n",
+    "Trial 98\n",
+    "Go: right, lights: green, oncoming: None, left: None, action: forward\n",
+    "Trial 99\n",
+    "Go: right, lights: green, oncoming: None, left: None, action: forward\n",
+    "Trial 100`\n",
+    "\n",
+    "It seems that in some cases, the agent chooses a wrong direction to go. In trial 90, it chose twice to turn right and followed the traffic rules, but it should have gone left.\n",
+    "\n",
+    "The only time the driving agent does not follow the traffic rules is in trial 97.\n",
+    "\n",
+    "It would be possible to change the driving agent to only go in the desired direction or wait, but that would minimize exploration.\n",
+    "\n",
+    "My final agent finds a close to optimal policy. As seen above it usually reaches the destination in time in the last 10 trials and it usually only gets penalties for not going in the right direction, but rarely for not following the traffic rules."
    ]
   }
  ],
